// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expression.js format 1`] = `
====================================options=====================================
parsers: ["flow", "babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

let x: string = (foo: string);

// https://github.com/prettier/prettier/issues/3936
const foo = ((1?2:3): number);

=====================================output=====================================
// @flow

let x: string = (foo: string);

// https://github.com/prettier/prettier/issues/3936
const foo = ((1 ? 2 : 3): number);

================================================================================
`;

exports[`statement.js format 1`] = `
====================================options=====================================
parsers: ["flow", "babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

foo: string;
bar: number;
(foo.bar: SomeType);

=====================================output=====================================
// @flow

foo: string;
bar: number;
(foo.bar: SomeType);

================================================================================
`;
